--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -38,7 +38,7 @@
       </li>
     <% end %>
     <li class="nav-item">
-      <%= link_to profile_employees_path, class: "nav-link" do %>
+      <%= link_to (current_user ? profile_users_path : profile_employees_path), class: "nav-link" do %>
         <i class="fa-solid fa-user"></i> My profile
       <% end %>
     </li>
