--- a/app/views/employees/profile.html.erb
+++ b/app/views/employees/profile.html.erb
@@ -52,16 +52,9 @@
 
         <div class="px-4 py-5 sm:px-6 border-t border-gray-200">
           <div class="flex justify-end gap-2">
-            <% if policy(@employee).edit? %>
-              <%= link_to edit_employee_path(@employee),
-                  class: "btn btn-primary inline-flex items-center" do %>
-                <i class="fas fa-edit mr-2"></i>
-                Editar Perfil
-              <% end %>
-            <% end %>
-
             <%= link_to edit_password_employees_path,
-                class: "btn btn-secondary inline-flex items-center" do %>
+                class: "btn btn-secondary inline-flex items-center",
+                data: { turbo_frame: "employee" } do %>
               <i class="fas fa-key mr-2"></i>
               Cambiar Contraseña
             <% end %>
