--- a/app/views/employees/edit_password.html.erb
+++ b/app/views/employees/edit_password.html.erb
@@ -1,5 +1,5 @@
 <%= turbo_frame_tag :employee do %>
-  <div class="container mx-auto px-4 sm:px-6 lg:px-8 py-8">
+  <div class="content">
     <div class="max-w-md mx-auto">
       <div class="bg-white shadow sm:rounded-lg">
         <div class="px-4 py-5 sm:p-6">
